created index entries for intro, indexrmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -45,8 +45,8 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 # Preface {-}
 
 This textbook aims to be an approachable introduction to the world of data science. 
-In this book, we define **data science** as the process of generating
-insight from data through **reproducible** and **auditable** processes. 
+In this book, we define **data science** \index{data science!definition} as the process of generating
+insight from data through **reproducible** \index{reproducible} and **auditable** \index{auditable} processes. 
 If you analyze some data and give your analysis to a friend or colleague, they should
 be able to re-run the analysis from start to finish and get the same result you did (*reproducibility*).
 They should also be able to see and understand all the steps in the analysis, as well as the history of how
