--- a/intro.Rmd
+++ b/intro.Rmd
@@ -22,7 +22,7 @@ By the end of the chapter, readers will be able to:
 
 ## Canadian languages data set
 
-In this chapter, we will walk through a full analysis of a data set relating to
+In this chapter, \index{Canadian languages!overview} we will walk through a full analysis of a data set relating to
 languages spoken at home by Canadians. Many Indigenous peoples exist in Canada 
 with their own cultures and languages; these languages are often unique to Canada and not spoken
 anywhere else in the world [@statcan2018mothertongue]. Sadly, colonization has
@@ -38,7 +38,7 @@ To learn more, please see Canadian Geographic's article on
 and the Truth and Reconciliation Commission of 
 Canada's [Calls to Action](http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf) [@calls2015].
 
-The data set we will study in this chapter is taken from 
+The data set we will study in this chapter is taken from \index{Canadian languages!canlang package}
 [the {canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has
 population language data collected during the 2016 Canadian census [@cancensus2016]. 
 In this data there are 214 languages recorded, each having 6 different properties:
@@ -58,7 +58,7 @@ then we might ask the following question, which we wish to answer using our data
 tongues in Canada, and how many people speak each of them?* 
 
 > **A note about the *data* in data science!** 
-> Data science cannot be done without a deep understanding of the data and
+> Data science\index{data science!good practices} cannot be done without a deep understanding of the data and
 > problem domain. In this book, we have simplified the data sets used in our
 > examples to concentrate on methods and fundamental concepts. But in real
 > life, you cannot and should not do data science without a domain expert.
@@ -76,7 +76,13 @@ descriptive, exploratory, inferential, predictive, causal, and mechanistic,
 all of which are defined in Table \@ref(tab:questions-table).
 Carefully formulating a question as early as possible in your analysis&mdash;and 
 correctly identifying which type of question it is&mdash;will guide your overall approach to 
-the analysis as well as the selection of appropriate tools.
+the analysis as well as the selection of appropriate tools.\index{question!types and definitions}
+\index{descriptive!definition}
+\index{exploratory!definition}
+\index{predictive!definition}
+\index{inferential!definition}
+\index{causal!definition}
+\index{mechanistic!definition}
 
 Table: (\#tab:questions-table) Types of data analysis question. From [What is the question?](https://science.sciencemag.org/content/347/6228/1314) [@leek2015question] and [The Art of Data Science](https://leanpub.com/artofdatascience) [@peng2015art].
 
@@ -94,36 +100,35 @@ first four types of question: descriptive, exploratory, predictive, and inferent
 causal and mechanistic questions are beyond the scope of this book.
 In particular, you will learn how to apply the following analysis tools:
 
-1. **Summarization:** computing and reporting aggregated
-values pertaining to a data set. 
+1. **Summarization:** \index{summarization!overview} computing and reporting aggregated values pertaining to a data set. 
 Summarization is most often used to answer descriptive questions,
 and can occasionally help with answering exploratory questions.
 For example, you might use summarization to answer the following question: 
 *what is the average race time for runners in this data set?*
 Tools for summarization are covered in detail in Chapters \@ref(reading)
 and \@ref(wrangling), but appear regularly throughout the text.
-2. **Visualization:** plotting data graphically. 
+2. **Visualization:** \index{visualization!overview} plotting data graphically. 
 Visualization is typically used to answer descriptive and exploratory questions,
 but plays a critical supporting role in answering all of the types of question in Table \@ref(tab:questions-table).
 For example, you might use visualization to answer the following question:
 *is there any relationship between race time and age for runners in this data set?* 
 This is covered in detail in Chapter \@ref(viz), but again appears regularly throughout the book.
-3. **Classification:** predicting a class or category for a new observation.
+3. **Classification:** \index{classification!overview} predicting a class or category for a new observation.
 Classification is used to answer predictive questions.
 For example, you might use classification to answer the following question:
 *given measurements of a tumour's average cell area and perimeter, is the tumour benign or malignant?*
 Classification is covered in Chapters \@ref(classification) and \@ref(classification2).
-4. **Regression:** predicting a quantitative value for a new observation. 
+4. **Regression:**  \index{regression!overview} predicting a quantitative value for a new observation. 
 Regression is also used to answer predictive questions.
 For example, you might use regression to answer the following question:
 *what will be the race time for a 20-year-old runner who weighs 50kg?*
 Regression is covered in Chapters \@ref(regression1) and \@ref(regression2).
-5. **Clustering:** finding previously unknown/unlabelled subgroups in a
+5. **Clustering:** \index{clustering!overview} finding previously unknown/unlabelled subgroups in a
 dataset. Clustering is often used to answer exploratory questions.
 For example, you might use clustering to answer the following question:
 *what products are commonly bought together on Amazon?*
 Clustering is covered in Chapter \@ref(clustering).
-6. **Estimation:** taking measurements for small number of items from a large group 
+6. **Estimation:**  \index{estimation!overview} taking measurements for small number of items from a large group 
  and making a good guess for the average or proportion for the large group. Estimation 
 is used to answer inferential questions.
 For example, you might use estimation to answer the following question:
@@ -144,17 +149,17 @@ according to the 2016 census.
 A data set is, at its core essence, a structured collection of numbers and characters.
 Aside from that, there are really no strict rules; data sets can come in 
 many different forms! Perhaps the most common form of data set that you will
-find in the wild, however, is *tabular data*. Think spreadsheets in Microsoft Excel: tabular data are
+find in the wild, however, is *tabular data*\index{tabular data}. Think spreadsheets in Microsoft Excel: tabular data are
 rectangular-shaped and spreadsheet-like, as shown in Figure
 \@ref(fig:img-spreadsheet-vs-dataframe). In this book, we will focus primarily on tabular data.
 
 Since we are using R for data analysis in this book, the first step for us is to
 load the data into R. When we load tabular data into
-R, it is represented as a *data frame* object. Figure
+R, it is represented as a *data frame* object\index{data frame!overview}. Figure
 \@ref(fig:img-spreadsheet-vs-dataframe) shows that an R data frame is very similar
-to a spreadsheet. We refer to the rows as **observations**; these are the things that we
+to a spreadsheet. We refer to the rows as **observations** \index{observation}; these are the things that we
 collect the data on, e.g., voters, cities, etc. We refer to the columns as
-**variables**; these are the characteristics of those observations, e.g., voters' political
+**variables** \index{variable}; these are the characteristics of those observations, e.g., voters' political
 affiliations, cities' populations, etc. 
 
 
@@ -163,7 +168,7 @@ knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
 ```
 
 The first kind of data file that we will learn how to load into R as a data
-frame is the *comma-separated values* format (`.csv` for short).  These files
+frame is the *comma-separated values* format (`.csv` for short)\index{comma-separated values|see{csv}}.  These files
 have names ending in `.csv`, and can be opened and saved using common
 spreadsheet programs like Microsoft Excel and Google Sheets.  For example, the
 `.csv` file named `can_lang.csv` 
@@ -176,10 +181,10 @@ head -n 10 data/can_lang.csv
 ```
 
 To load this data into R so that we can do things with it (e.g, perform
-analyses or create data visualizations), we will need to use a *function.* A
+analyses or create data visualizations), we will need to use a *function.* \index{function} A
 function is a special word in R that takes instructions (we call these
-*arguments*) and does something. The function we will use to load a `.csv` file
-into R is called `read_csv`. In its most basic 
+*arguments*) \index{argument} and does something. The function we will use to load a `.csv` file
+into R is called `read_csv`. \index{csv!reading} In its most basic 
 use-case, `read_csv` expects that the data file:
 
 - has column names (or *headers*),
@@ -192,10 +197,10 @@ function. Note that the `read_csv` function is not included in the base
 installation of R, meaning that it is not one of the primary functions ready to
 use when you install R. Therefore, you need to load it from somewhere else
 before you can use it. The place from which we will load it is called an R *package*. 
-An R package is a collection of functions that can be used in addition to the
+An R package \index{package} is a collection of functions that can be used in addition to the
 built-in R package functions once loaded. The `read_csv` function, in
 particular, can be made accessible by loading the `tidyverse` package [@wickham2019tidverse]
-using the `library` function. The `tidyverse` package contains many
+using the `library` function. \index{library} The `tidyverse` \index{tidyverse} package contains many
 functions that we will use throughout this book to load, clean, wrangle, 
 and visualize data. 
 
@@ -251,14 +256,15 @@ What would be more useful would be to give a name
 to the data frame that `read_csv` outputs, 
 so that we can refer to it later for analysis and visualization.
 
-The way to assign a name to a value in R is via the *assignment symbol* `<-`.
+The way to assign a name to a value in R is via the *assignment symbol* `<-`. 
+\index{leftarrow@\texttt{<-}|see{assignment symbol}}\index{assignment symbol}
 On the left side of the assignment symbol you put the name that you want
 to use, and on the right side of the assignment symbol
 you put the value that you want the name to refer to.
 Names can be used to refer to almost anything in R, such as numbers,
 words (also known as *strings* of characters), and data frames!
 Below, we set `my_number` to `3` (the result of `1+2`)
-and we set `name` to the string `"Alice"`.
+and we set `name` to the string `"Alice"`. \index{string}
 
 ```{r naming-things}
 my_number <- 1 + 2
@@ -281,7 +287,7 @@ R just interprets this as adding 2 and 3:
 my_number + 2
 ```
 
-Object names can consist of letters, numbers, periods `.` and underscores `_`.
+Object names \index{object} can consist of letters, numbers, periods `.` and underscores `_`.
 Other symbols won't work since they have their own meanings in R. For example,
 `+` is the addition symbol; if we try to assign a name with
 the `+` symbol, R will complain and we will get an error!
@@ -293,7 +299,7 @@ na+me <- 1
 Error: unexpected assignment in "na+me <-"
 ```
 
-There are certain conventions for naming objects in R. When naming an object we
+There are certain conventions for naming objects in R. When naming \index{object!naming convention} an object we
 suggest using only lower case letters, numbers and underscores `_` to separate
 the words in a name.  R is case sensitive, which means that `Letter` and
 `letter` would be two different objects in R.  You should also try to give your
@@ -331,8 +337,8 @@ in 2016 as mother tongues in Canada. In particular, we will construct
 a table with the ten Aboriginal languages that have the largest 
 counts in the `mother_tongue` column. 
 The `filter` and `select` functions from the `tidyverse` package will help us
-here. The `filter` function allows you to obtain a subset of the
-rows with specific values, while the `select` function allows you 
+here. The `filter` \index{filter} function allows you to obtain a subset of the
+rows with specific values, while the `select` \index{select} function allows you 
 to obtain a subset of the columns. Therefore, we can `filter` the rows to extract the
 Aboriginal languages in the data set, and then use `select` to obtain only the
 columns we want to include in our table.
@@ -344,19 +350,19 @@ high-level categories of languages, which include "Aboriginal languages",
 our question we want to filter our data set so we restrict our attention 
 to only those languages in the "Aboriginal languages" category. 
 
-We can use the `filter` function to obtain the subset of rows with desired
+We can use the `filter` \index{filter} function to obtain the subset of rows with desired
 values from a data frame. The first argument to `filter` is the name of the data frame
-object, `can_lang`. The second argument is a *logical statement* to use when
+object, `can_lang`. The second argument is a *logical statement* \index{logical statement} to use when
 filtering the rows. A logical statement evaluates to either `TRUE` or `FALSE`;
 `filter` keeps only those rows for which the logical statement evaluates to `TRUE`.
 For example, in our analysis, we are interested in keeping only languages in the
 "Aboriginal languages" higher-level category. We can use 
-the *equivalency operator* `==` to compare the values
+the *equivalency operator* `==` \index{logical statement!equivalency operator} to compare the values
 of the `category` column with the value `"Aboriginal languages"`; you will learn about
 many other kinds of logical statement in Chapter \@ref(wrangling).  Similar to
 when we loaded the data file and put quotes around the filename, here we need
 to put quotes around `"Aboriginal languages"`. Using quotes tells R that this
-is a string *value* and not one of the special words that make up R
+is a string *value* \index{string} and not one of the special words that make up R
 programming language, nor one of the names we have given to data frames in the
 code we have already written.
 With these arguments, `filter` returns a data frame that has all the columns of
@@ -376,7 +382,7 @@ gave us the result we wanted!
 
 ### Using `select` to extract columns
 
-Now let's use `select` to extract the `language` and `mother_tongue` columns
+Now let's use `select` \index{select} to extract the `language` and `mother_tongue` columns
 from this data frame. To extract these columns, we need to provide the `select`
 function with three arguments. The first argument is the name of the data frame
 object, which in this example is `aboriginal_lang`. The second and third
@@ -399,7 +405,7 @@ languages in the data set and their associated counts. However, we want to know
 the **ten** languages that are spoken most often. As a next step, we could
 order the `mother_tongue` column from greatest to least and then extract only
 the top ten rows. This is where the `arrange` and `slice` functions come to the
-rescue! 
+rescue! \index{arrange}\index{slice}
 
 The `arrange` function allows us to order the rows of a data frame by the
 values of a particular column. We need to pass the data frame as the first
@@ -435,7 +441,7 @@ Visualizations are a great tool for summarizing information to help you
 effectively communicate with your audience. 
 
 ## Exploring data with visualizations
-Creating effective data visualizations is an essential component of any data
+Creating effective data visualizations \index{visualization} is an essential component of any data
 analysis. In this section we will develop a visualization of the 
  ten Aboriginal languages that were most often reported in 2016 as mother tongues in
 Canada, as well as the number of people that speak each of them.
@@ -447,10 +453,10 @@ columns (or variables). In addition, there is a single row (or observation) for 
 The data are, therefore, in what we call a *tidy data* format. Tidy data is a
 fundamental concept and will be a significant focus in the remainder of this
 book: many of the functions from `tidyverse` require tidy data, including the
-`ggplot` function that we will use shortly for our visualization. We will
+`ggplot` \index{ggplot} function that we will use shortly for our visualization. We will
 formally introduce tidy data in Chapter \@ref(wrangling).
 
-We will make a bar plot to visualize our data. A bar plot is a chart where the
+We will make a bar plot to visualize our data. A bar plot \index{plot!bar} is a chart where the
 heights of the bars represent certain values, like counts or proportions. We
 will make a bar plot using the `mother_tongue` and `language` columns from our
 `ten_lang` data frame. To create a bar plot of these two variables using the 
@@ -476,7 +482,7 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
 > end with a `+` symbol, and so it keeps reading the next line to figure out
 > what the right hand side of the `+` symbol should be.  We could, of course,
 > put all of the added layers on one line of code, but splitting them across
-> multiple lines helps a lot with code readability.
+> multiple lines helps a lot with code readability. \index{multi-line expression}
 
 
 ### Formatting ggplot objects
@@ -493,12 +499,12 @@ will not know how we measure this variable, nor which group of people the
 measurements were taken. An axis label that reads "Mother Tongue (Number of
 Canadians, 2016 Census)" would be much more informative.
 
-Adding additional layers to our visualizations that we create in `ggplot` is
+Adding additional layers \index{plot!layers} to our visualizations that we create in `ggplot` is
 one common and easy way to improve and refine our data visualizations. New
 layers are added to `ggplot` objects using the `+` symbol. For example, we can
 use the `xlab` (short for x axis label) and `ylab` (short for y axis label) functions 
 to add layers where we specify meaningful
-and informative labels for the x and y axes. Again, since we are specifying
+and informative labels for the x and y axes. \index{plot!axis labels} Again, since we are specifying
 words (e.g. `"Mother Tongue (Number of Canadians, 2016 Census)"`) as arguments to
 `xlab` and `ylab`, we surround them with double-quotes. We can add many more
 layers to format the plot further, and we will explore these in Chapter
@@ -531,7 +537,7 @@ the visualization to make it even more well-suited to answering the question
 we asked earlier in this chapter. For example, the visualization could be made more transparent by
 organizing the bars according to the number of Canadian residents reporting
 each language, rather than in alphabetical order. We can reorder the bars using
-the `reorder` function, which orders a variable (here `language`) based on the
+the `reorder` \index{reorder} function, which orders a variable (here `language`) based on the
 values of the second variable (`mother_tongue`). 
 
 ```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
@@ -565,7 +571,8 @@ grey to white to improve the contrast. We have also actually skipped the
 in the `ggplot` function, you don't actually need to `select` the columns in advance
 when creating a visualization. And finally, we provided *comments* next to 
 many of the lines of code below using the
-hash symbol `#`. When R sees a `#` sign, it will ignore all of the text that
+hash symbol `#`. When R sees a `#` sign, \index{comment} \index{commentsymb@\#|see{comment}} it 
+will ignore all of the text that
 comes after the symbol on that line. So you can use comments to explain lines 
 of code for others, and perhaps more importantly, your future self!
 It's good practice to get in the habit of
@@ -606,7 +613,10 @@ these steps in much more detail!
 There are many R functions in the `tidyverse` package (and beyond!), and 
 nobody can be expected to remember what every one of them does
 nor all of the arguments we have to give them. Fortunately R provides 
-the `?` symbol, which provides an easy way to pull up the documentation for 
+the `?` symbol, which 
+\index{questionmark@? symbol|see{documentation}}
+\index{help|see{documentation}}
+\index{documentation} provides an easy way to pull up the documentation for 
 most functions quickly. To use the `?` symbol to access documentation, you 
 just put the name of the function you are curious about after the `?` symbol.
 For example, if you had forgotten what the `filter` function
