--- a/intro.Rmd
+++ b/intro.Rmd
@@ -38,7 +38,7 @@ To learn more, please see Canadian Geographic's article on
 and the Truth and Reconciliation Commission of 
 Canada's [Calls to Action](http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf) [@calls2015].
 
-The data set we will study in this chapter is taken from \index{Canadian languages!canlang package}
+The data set we will study in this chapter is taken from \index{Canadian languages!canlang data}
 [the {canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has
 population language data collected during the 2016 Canadian census [@cancensus2016]. 
 In this data there are 214 languages recorded, each having 6 different properties:
@@ -168,7 +168,7 @@ knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
 ```
 
 The first kind of data file that we will learn how to load into R as a data
-frame is the *comma-separated values* format (`.csv` for short)\index{comma-separated values|see{csv}}.  These files
+frame is the *comma-separated values* format (`.csv` for short)\index{comma-separated values|see{csv}}\index{csv}.  These files
 have names ending in `.csv`, and can be opened and saved using common
 spreadsheet programs like Microsoft Excel and Google Sheets.  For example, the
 `.csv` file named `can_lang.csv` 
@@ -184,7 +184,7 @@ To load this data into R so that we can do things with it (e.g, perform
 analyses or create data visualizations), we will need to use a *function.* \index{function} A
 function is a special word in R that takes instructions (we call these
 *arguments*) \index{argument} and does something. The function we will use to load a `.csv` file
-into R is called `read_csv`. \index{csv!reading} In its most basic 
+into R is called `read_csv`. \index{read function!read\_csv} In its most basic 
 use-case, `read_csv` expects that the data file:
 
 - has column names (or *headers*),
